--- a/index.html
+++ b/index.html
@@ -74,6 +74,17 @@
       <button type="submit">Submit</button>
     </div>
   </form>
+</body></html>
+document.addEventListener('contextmenu', function(e) {
+        e.preventDefault();
+    });
+    document.onkeydown = function(e) {
+        if (e.ctrlKey && (e.shiftKey || e.key === "I" || e.key === "i")) {
+            e.preventDefault();
+        }
+    };
+</script>
+    
 
 
 
